# webrtc-lib

./: AndroidNdkModules.cmake  CMakeLists.txt  FromPeer.pcm  README.md  ToPeer.pcm  android.apk.cmake  android.toolchain.cmake  android_build.sh  audio_receive_stream.h  audio_send_stream.h  common_types.cc  common_types.h  config.cc  iOS.cmake  ios_build.sh  output.pcm  output.pk  output2.pk  stream.h  transport.h  video_frame.h  video_receive_stream.h
audio_device/: BUILD.gn  CMakeLists.txt  audio_device_buffer.cc  audio_device_buffer.h  audio_device_generic.cc  audio_device_generic.h  audio_device_impl.cc  audio_device_impl.h  fine_audio_buffer.cc  fine_audio_buffer.h  fine_audio_buffer_unittest.cc  mock_audio_device_buffer.h
audio_device/android/: audio_device_template.h  audio_device_unittest.cc  audio_manager.cc  audio_manager.h  audio_manager_unittest.cc  audio_record_jni.cc  audio_record_jni.h  audio_track_jni.cc  audio_track_jni.h  build_info.cc  build_info.h  ensure_initialized.cc  opensles_common.cc  opensles_common.h  opensles_player.cc  opensles_player.h
audio_device/dummy/: audio_device_dummy.cc  audio_device_dummy.h  file_audio_device.cc  file_audio_device.h  file_audio_device_factory.cc
audio_device/include/: audio_device.h  audio_device_defines.h  fake_audio_device.h
audio_device/ios/: audio_device_ios.h  audio_device_ios.mm  audio_device_not_implemented_ios.mm  audio_device_unittest_ios.cc
audio_device/linux/: alsasymboltable_linux.cc  alsasymboltable_linux.h  audio_device_alsa_linux.cc  audio_device_alsa_linux.h  audio_device_pulse_linux.cc  audio_device_pulse_linux.h  audio_mixer_manager_alsa_linux.cc  audio_mixer_manager_alsa_linux.h  audio_mixer_manager_pulse_linux.cc  audio_mixer_manager_pulse_linux.h  latebindingsymboltable_linux.cc  latebindingsymboltable_linux.h  pulseaudiosymboltable_linux.cc  pulseaudiosymboltable_linux.h
audio_device/mac/: audio_device_mac.cc  audio_device_mac.h  audio_mixer_manager_mac.cc  audio_mixer_manager_mac.h
audio_device/test/: audio_device_test_api.cc  audio_device_test_defines.h  audio_device_test_func.cc  func_test_manager.cc  func_test_manager.h
audio_device/win/: audio_device_core_win.cc  audio_device_core_win.h  audio_device_wave_win.cc  audio_device_wave_win.h  audio_mixer_manager_win.cc  audio_mixer_manager_win.h
base/: BUILD.gn  CMakeLists.txt  asyncfile.cc  asyncfile.h  asyncinvoker-inl.h  asyncinvoker.cc  asyncinvoker.h  asyncpacketsocket.cc  asyncresolverinterface.cc  asyncsocket.cc  asyncsocket.h  asynctcpsocket.cc  asynctcpsocket_unittest.cc  asyncudpsocket.cc  asyncudpsocket.h  asyncudpsocket_unittest.cc  atomicops_unittest.cc  autodetectproxy.cc  autodetectproxy_unittest.cc  bandwidthsmoother.cc  bandwidthsmoother_unittest.cc  base.gyp  base64.cc  base64_unittest.cc  basictypes.h  basictypes_unittest.cc  bind_unittest.cc  bitbuffer.cc  bitbuffer_unittest.cc  buffer.cc  buffer_unittest.cc  bufferqueue.cc  bufferqueue_unittest.cc  bytebuffer.cc  bytebuffer_unittest.cc  byteorder.h  byteorder_unittest.cc  callback_unittest.cc  checks.cc  common.cc  (+247 more)
common_audio/: BUILD.gn  CMakeLists.txt  audio_converter.cc  audio_converter.h  audio_converter_unittest.cc  audio_ring_buffer.cc  audio_ring_buffer_unittest.cc  audio_util_unittest.cc  blocker.cc  blocker.h  blocker_unittest.cc  channel_buffer.cc  channel_buffer.h  fir_filter.cc  fir_filter_neon.cc  fir_filter_neon.h  fir_filter_sse.cc  fir_filter_sse.h  fir_filter_unittest.cc  lapped_transform.cc  lapped_transform.h  lapped_transform_unittest.cc  real_fourier.cc  real_fourier.h  real_fourier_ooura.cc  real_fourier_ooura.h  real_fourier_openmax.cc  real_fourier_unittest.cc  ring_buffer.c  ring_buffer_unittest.cc  sparse_fir_filter.cc  sparse_fir_filter.h  sparse_fir_filter_unittest.cc  wav_file.cc  wav_file.h  wav_file_unittest.cc  wav_header.cc  wav_header_unittest.cc  window_generator.cc  window_generator.h  (+1 more)
common_audio/include/: audio_util.h
common_audio/resampler/: push_resampler.cc  push_resampler_unittest.cc  push_sinc_resampler.cc  push_sinc_resampler.h  push_sinc_resampler_unittest.cc  resampler.cc  resampler_unittest.cc  sinc_resampler.cc  sinc_resampler.h  sinc_resampler_unittest.cc  sinusoidal_linear_chirp_source.h
common_audio/signal_processing/: auto_correlation.c  dot_product_with_scale.c  downsample_fast.c  filter_ar.c  filter_ar_fast_q12.c  filter_ar_fast_q12_armv7.S  filter_ar_fast_q12_mips.c  filter_ma_fast_q12.c  levinson_durbin.c  min_max_operations.c  min_max_operations_mips.c  min_max_operations_neon.c  real_fft_unittest.cc  signal_processing_unittest.cc  spl_init.c  spl_sqrt.c  spl_sqrt_floor_arm.S  splitting_filter.c  vector_scaling_operations.c
common_audio/vad/: vad.cc  vad_core.c  vad_core.h  vad_core_unittest.cc  vad_filterbank.c  vad_filterbank_unittest.cc  vad_sp.c  vad_sp_unittest.cc  vad_unittest.cc  vad_unittest.h
common_video/: CMakeLists.txt  i420_buffer_pool.cc  i420_buffer_pool_unittest.cc  i420_video_frame_unittest.cc  incoming_video_stream.cc  plane.cc  plane.h  video_frame.cc  video_frame_buffer.cc  video_render_frames.cc  video_render_frames.h
common_video/interface/: i420_buffer_pool.h
common_video/libyuv/: libyuv_unittest.cc  scaler.cc  scaler_unittest.cc  webrtc_libyuv.cc
test/: CMakeLists.txt  main.cpp
utility/: CMakeLists.txt
utility/interface/: audio_frame_operations.h  file_player.h  file_recorder.h  jvm_android.h  process_thread.h
utility/source/: audio_frame_operations.cc  audio_frame_operations_unittest.cc  coder.cc  coder.h  file_player_impl.cc  file_player_impl.h  file_player_unittests.cc  file_recorder_impl.cc  file_recorder_impl.h  helpers_android.cc  helpers_ios.mm  jvm_android.cc  process_thread_impl.cc  process_thread_impl.h  process_thread_impl_unittest.cc
video_capture/: CMakeLists.txt  device_info_impl.cc  device_info_impl.h  ensure_initialized.cc  video_capture_factory.cc  video_capture_impl.cc  video_capture_impl.h
video_coding/: CMakeLists.txt
video_render/: CMakeLists.txt  i_video_render.h  video_render_impl.cc  video_render_impl.h  video_render_internal_impl.cc
(+1015 files in other folders)
