# CMake 最低版本号要求
cmake_minimum_required (VERSION 2.8)
# 项目信息
project (main)

SET(CMAKE_SKIP_BUILD_RPATH  TRUE)
# add library
set(CMAKE_BUILD_TYPE Release)
# aux_source_directory(./testlib SRC_TEST)

# RPATH and library search setting
cmake_policy(VERSION 2.8)
# SET(CMAKE_SKIP_BUILD_RPATH  FALSE)
# SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE) 
# SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/out")
# SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
# INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/base)

ADD_SUBDIRECTORY(base)
# ADD_SUBDIRECTORY(audio_device)
# ADD_SUBDIRECTORY(audio_processing)




# set(CMAKE_BUILD_TYPE "Debug")
# set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
# set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
